<resources>
  <string name="app_name">Butterknife</string>
  <string name="title_item_detail">Item Detail</string>
  <string name="hint_username">Username</string>
  <string name="hint_password">Password</string>
  <string name="label_save_username">Save Username</string>
  <string name="label_login">Login</string>
  <string name="label_signup">Signup</string>
  <string name="label_or">or</string>
  <string name="hint_fullname">Full Name</string>
  <string name="label_logging_in">Logging in...</string>
  <string name="label_show_signup">Show Signup</string>
  <string name="label_show_login">Show Login</string>
  <string name="avatar">avatar</string>
</resources>
