<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

  <EditText
      android:id="@+id/username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_username"/>

  <EditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_password"
      android:inputType="textPassword"
      android:imeOptions="actionGo"/>

  <CheckBox
      android:id="@+id/save_username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/label_save_username"/>

  <Button
      android:id="@+id/login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/label_login"/>

</LinearLayout>